--- a/Excel.html
+++ b/Excel.html
@@ -14,14 +14,11 @@
 <body>
 <div>
 		<header class="row">
-			<div class="col-md-2"></div>
-			<div class="col-md-10"></div>
+			 <div>
+            <img src="videos/Moles.gif">
+            </div>
 		</header>
-		<div>
-			<p>
-				<img src="http://i1230.photobucket.com/albums/ee496/JaeKar99/Molecules.gif" border="0" alt=" photo Molecules.gif">
-			</p>
-		</div>
+		
 		<nav class="row">
 			 <nav class="navbar navbar-inverse">
             <div class="container-fluid">
@@ -50,34 +47,28 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Communication <b class="caret"></b></a>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a href="Sub_Pred.html">Subjects and Predicates</a>
+                                    <a href="Sub_pred.html">Subjects and Predicates</a>
                                 </li>
                                 <li>
                                     <a href="Public.html">Public Speaking</a>
                                 </li>
                             </ul>
                         </li>
-                        <li><a href="Bio.html">Bio</a></li>
-                        <li><a href="feedback.html">Feedback</a></li> 
+                        <li><a href="Bio.html">Bios</a></li>
+                        <li><a href="Feedback.html">Feedback</a></li> 
                     </ul>
                 </div>
             </div>
 		</nav>
-		<main>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		
-		</main>
 
-		<section class="row">
-			<div class="col-md-3"></div>
-			<div class="col-md-6"></div>
-			<div class="col-md-3"></div>
+		<section>
+			<div class="col-md-2"></div>
+			<div class="col-md-8"><iframe src="https://www.youtube.com/embed/psldAKgafwU" width="720" height="515" frameborder="0" allowfullscreen></iframe></div>
 		</section>
+        <section>
+            <br>
+            <div class="col-md-12"><p>Vlookup is use to find specific information in the spreadsheet and make it easier to input and output different information from any spreadsheet. In this video you will learn about how to navigate Vlookup and to understand of making things easier in your future jobs. </p></div>
+        </section>
 		<footer class="row">
 			<div class="col-md-4"></div>
 			<div class="col-md-4"></div>
