--- a/Network.html
+++ b/Network.html
@@ -14,14 +14,11 @@
 <body>
 <div>
 		<header class="row">
-			<div class="col-md-2"></div>
-			<div class="col-md-10"></div>
+			<div>
+            <img src="videos/dab.gif">
+        </div>
 		</header>
-		<div>
-			<p>
-				<img src="http://i1230.photobucket.com/albums/ee496/JaeKar99/TabDkSide.gif" border="0" alt=" photo TabDkSide.gif">
-			</p>
-		</div>
+		
 		<nav class="row">
 			 <nav class="navbar navbar-inverse">
             <div class="container-fluid">
@@ -57,17 +54,24 @@
                                 </li>
                             </ul>
                         </li>
-                        <li><a href="Bio.html">Bio</a></li>
-                        <li><a href="feedback.html">Feedback</a></li> 
+                        <li><a href="Bio.html">Bios</a></li>
+                        <li><a href="Feedback.html">Feedback</a></li> 
                     </ul>
                 </div>
             </div>
 		</nav>
-		<section class="row">
-			<div class="col-md-3"></div>
-			<div class="col-md-6"></div>
-			<div class="col-md-3"></div>
+        <main>
+        <h1><center><span id="whitetext">Network Troubleshooting</span></center></h1>
+        </main>
+
+		<section>
+			<div class="col-md-2"></div>
+			<div class="col-md-8"><iframe id="iframe_container" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" width="720" height="515" src="https://prezi.com/embed/2ytdrduhc22y/?bgcolor=ffffff&amp;lock_to_path=0&amp;autoplay=0&amp;autohide_ctrls=0&amp;landing_data=bHVZZmNaNDBIWnNjdEVENDRhZDFNZGNIUE43MHdLNWpsdFJLb2ZHanI0VTNQQlI4SElMSTB4bzFTN1haTVVYTlNRPT0&amp;landing_sign=oP67KAC53GMbIDdz0iQvGiKHWOL4c1HjN12SPs2cDgY"></iframe></div>
 		</section>
+        <section>
+            <div class="col-md-12"><p>There are many ways to troubleshooting your computer. I’m going to show the CompTia troubleshooting theory that has six steps that takes you through a process of resolving a computer problem. By following these six steps to effectively, you will be able to deal with various problems that may present themselves in your daily work. By documenting the actions you took and the outcomes, you will be better prepared when the issue or similar issues present themselves in your future work.</p></div>
+        </section>
+            
 		<footer class="row">
 			<div class="col-md-4"></div>
 			<div class="col-md-4"></div>
