--- a/Public.html
+++ b/Public.html
@@ -14,14 +14,11 @@
 <body>
 <div>
 		<header class="row">
-			<div class="col-md-2"></div>
-			<div class="col-md-10"></div>
+			<div>
+            <img src="videos/Orange.gif">
+            </div>
 		</header>
-		<div>
-			<p>
-				<img src="http://i1230.photobucket.com/albums/ee496/JaeKar99/OrangeFlare.gif" border="0" alt=" photo OrangeFlare.gif">
-			</p>
-		</div>
+		
 		<nav class="row">
 			 <nav class="navbar navbar-inverse">
             <div class="container-fluid">
@@ -57,8 +54,8 @@
                                 </li>
                             </ul>
                         </li>
-                        <li><a href="Bio.html">Bio</a></li>
-                        <li><a href="feedback.html">Feedback</a></li> 
+                        <li><a href="Bio.html">Bios</a></li>
+                        <li><a href="Feedback.html">Feedback</a></li> 
                     </ul>
                 </div>
             </div>
@@ -67,10 +64,15 @@
 		<h1><center><span id="greentext">Public Speaking Avenue</span></center></h1>
 		</main>
 
+        <section>
+            <div class="col-md-2"></div>
+            <div class="col-md-8"><iframe src="https://www.youtube.com/embed/rDoqDK_6KSE" width="720" height="515" frameborder="0" allowfullscreen></iframe></div>
+        </section>
 		<section class="row">
-			<div class="col-md-3"></div>
-			<div class="col-md-6"></div>
-			<div class="col-md-3"></div>
+			
+			<div class="col-md-12"><p>What helps make a great speech is understanding body language. This understanding is just as important as understanding what is said. Having a grasp of body language and spoken language will lead to confidence in communicating. I will briefly explain different steps of how to stay confident, organized, and to be aware of repetition.</p></div>
+			
+            
 		</section>
 		<footer class="row">
 			<div class="col-md-4"></div>
