--- a/feedback.html
+++ b/feedback.html
@@ -14,14 +14,11 @@
 <body>
 <div>
 		<header class="row">
-			<div class="col-md-2"></div>
-			<div class="col-md-10"></div>
+			<div>
+                <img src="videos/RedHex.gif">
+            </div>
 		</header>
-		<div>
-			<p>
-				<img src="http://i1230.photobucket.com/albums/ee496/JaeKar99/RedHexTunnel.gif" border="0" alt=" photo RedHexTunnel.gif">
-			</p>
-		</div>
+		
 		<nav class="row">
 			 <nav class="navbar navbar-inverse">
             <div class="container-fluid">
@@ -39,10 +36,10 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Technology <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     <li>
-                                        <a href="Network.html">Network Troubleshooting</a>
+                                        <a href="network.html">Network Troubleshooting</a>
                                     </li>
                                     <li>
-                                        <a href="Excel.html">Excel</a>
+                                        <a href="excel.html">Excel</a>
                                     </li>
                                 </ul>
                         </li>
@@ -57,8 +54,8 @@
                                 </li>
                             </ul>
                         </li>
-                        <li><a href="Bio.html">Bio</a></li>
-                        <li><a href="feedback.html">Feedback</a></li> 
+                        <li><a href="Bio.html">Bios</a></li>
+                        <li><a href="Feedback.html">Feedback</a></li> 
                     </ul>
                 </div>
             </div>
@@ -66,7 +63,7 @@
         <main class="container">
                 <div class="col-md-12 page-title">
                     <h1>Tell us about your experience</h1>
-                    <form id="form" action="http://formspree.io/aaziz@chi.yearup.org" method="POST">
+                    <form id="form" action="http://blindsey@chi.yearup.org" method="POST">
                         <label for="your_name">Name</label>
                         <input type="text" id="your_name" placeholder="Jason Smith" name="name">
 
