--- a/Sub_Pred.html
+++ b/Sub_Pred.html
@@ -14,14 +14,11 @@
 <body>
 <div>
 		<header class="row">
-			<div class="col-md-2"></div>
-			<div class="col-md-10"></div>
+			<div>
+            <img src="videos/C.gif">
+        </div>
 		</header>
-		<div>
-			<p>
-				<img src="http://i1230.photobucket.com/albums/ee496/JaeKar99/C-Bubbles.gif" border="0" alt=" photo C-Bubbles.gif">
-			</p>
-		</div>
+		
 		<nav class="row">
 			 <nav class="navbar navbar-inverse">
             <div class="container-fluid">
@@ -57,8 +54,8 @@
                                 </li>
                             </ul>
                         </li>
-                        <li><a href="Bio.html">Bio</a></li>
-                        <li><a href="feedback.html">Feedback</a></li> 
+                        <li><a href="Bio.html">Bios</a></li>
+                        <li><a href="Feedback.html">Feedback</a></li> 
                     </ul>
                 </div>
             </div>
@@ -66,18 +63,18 @@
 		<main>
 		<h1><center>Subjects and Predicates</center></h1>
 		</main>
-
-		
-			<div class="col-md-3"></div>
-			<div class="col-md-6">
-			<p>Grammar knowledge is mandatory in the business and technical world because it brings structure to written and verbal communication. Identifying a subject and predicate in a sentence is very important in grammar. Subjects and predicates in a sentence are important because they define who or what the sentence is about and what is being done.</p><br><p><span id="bluetext">Subject (Subj.)</span>  - who or what the sentence is about</p></br><p>The dean's report was reviewed by the faculty <span id="bluetext">senate</span>.</p><p><span id="bluetext">The Johnsons</span> added a double garage to their house.</p><p><span id="bluetext">The detective</span> pulled down the brim of his hat and walked home.</p><p><span id="bluetext">Johnny</span> shot someone else that night, and <span id="bluetext">the husband</span> played along.</p><br><p><span id="redtext">Predicate (P)</span>  - what the subject is or being</p><br><p>The telegram <span id="redtext">contained exciting news</span>.</p><p>The girls in our office <span id="redtext">are experienced instructors</span>.</p><p>Jane <span id="redtext">is my youngest sister</span>, who <span id="redtext">lives with our mother</span>.</p><p>Dr. Johnson <span id="redtext">is acting president of the university</span>.</p></div>
-
-			<div>
-			</div>
-
-
-			
+        <section>
+            <div class="col-md-2"></div>
+            <div class="col-md-8"><iframe  src="https://www.youtube.com/embed/KSe-MhKfTSs" width="720" height="515" frameborder="0" allowfullscreen></iframe></div>
+        </section>
+        <section>
+			<div class="col-md-12">
+			<p>Grammar knowledge is mandatory in the business and technical world because it brings structure to written and verbal communication. Identifying a subject and predicate in a sentence is very important in grammar. Subjects and predicates in a sentence are important because they define who or what the sentence is about and what is being done.</p><br>
 		</section>
+        <section>
+            <div class="col-md-3"></div>
+            <div class="col-md-6"><p><span id="bluetext">Subject (Subj.)</span>  - who or what the sentence is about</p></br><p>The dean's report was reviewed by the faculty <span id="bluetext">senate</span>.</p><p><span id="bluetext">The Johnsons</span> added a double garage to their house.</p><p><span id="bluetext">The detective</span> pulled down the brim of his hat and walked home.</p><p><span id="bluetext">Johnny</span> shot someone else that night, and <span id="bluetext">the husband</span> played along.</p><br><p><span id="redtext">Predicate (P)</span>  - what the subject is or being</p><br><p>The telegram <span id="redtext">contained exciting news</span>.</p><p>The girls in our office <span id="redtext">are experienced instructors</span>.</p><p>Jane <span id="redtext">is my youngest sister</span>, who <span id="redtext">lives with our mother</span>.</p><p>Dr. Johnson <span id="redtext">is acting president of the university</span>.</p></div></div>
+        </section>
 		<footer class="row">
 			<div class="col-md-4"></div>
 			<div class="col-md-4"></div>
