--- a/index.html
+++ b/index.html
@@ -11,15 +11,13 @@
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     
 </head>
-<body background="">
+<body>
 <div id="wrapper">
 		<header class="row">
+        <div>
+            <img src="videos/Warp.gif">
+        </div>
 		</header>
-		<div>
-			<p>
-				<img src="http://i1230.photobucket.com/albums/ee496/JaeKar99/WarpeFect.gif">
-			</p>
-		</div>
 		<nav class="row">
 			 <nav class="navbar navbar-inverse">
             <div class="container-fluid">
@@ -55,8 +53,8 @@
                                 </li>
                             </ul>
                         </li>
-                        <li><a href="Bio.html">Bio</a></li>
-                        <li><a href="feedback.html">Feedback</a></li> 
+                        <li><a href="Bio.html">Bios</a></li>
+                        <li><a href="Feedback.html">Feedback</a></li> 
                     </ul>
                 </div>
             </div>
@@ -64,7 +62,10 @@
 			<main>
 
 		<h1><center>Welcome to CyberTech!!</center></h1>
-		
+		<section>
+            <div class="col-md-2"></div> 
+            <div class="col-md-8"><img src="images/Team.jpg" class="img-responsive" alt="Responsive images" width="520" height="515"></div>      
+        </section>
 		<div class="col-md-6">
 			<h1>Summary</h1>
 			<p class="fonts"> This is a website dedicated to teaching different professional methods to use in the workplace. This includes how to properly use <a href="Sub_Pred.html">Subjects and Predicates</a>. We will also teach you different Excel functions such as <a href="Excel.html">VLookUp and IfError</a>. There are many different grammar lessons that could be taught. We will be teaching you all about <a href="Public.html">Public Speaking</a>. We will provide you with the right methods so you are able to understand the concepts better.</p>
@@ -72,7 +73,7 @@
 	
 			<div class="col-md-6">
 			<h1>How will this help me?</h1>
-			<p class="fonts"> With these lessons, you will be able to be more effective in nailing that job interview. You will be more effective in your writing skills. Most importantly, you will be more effective once you actually have the job. Through hard work and dedication you can learn anything. We have minimized the time to teach these lessons so that there will be less room for error. It will be straight forward and after all the lessons you will become:
+			<p class="fonts"> With these lessons, you will be able to be more effective in nailing that job interview. You will be more effective in your writing skills. Most importantly, you will be more effective once you actually have the job. Through hard work and dedication you can learn anything. We have minimized the time to teach these lessons so that there will be less room for error. It will be straight forward and after all the lessons you will become apart of: CyberTech
 		
 		</main>
 		<section class="row">
